style: fix main content visibility

--- a/style.css
+++ b/style.css
@@ -27,7 +27,8 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 5em;
+  padding: 5rem;
+  padding-bottom: 8rem;
 }
 
 button {
